[gd_scene format=3 uid="uid://bdd0xnaaqj5a8"]

[ext_resource type="Script" uid="uid://b844nbxcpvijm" path="res://Scripts/UI/credit_text_controller.gd" id="2_gemva"]
[ext_resource type="Texture2D" uid="uid://o2hyede5pb4i" path="res://Assets/Sprites/UI/FJ_title.png" id="2_ifpi7"]
[ext_resource type="FontFile" uid="uid://trl0yduromcg" path="res://Assets/Font/pixel_font/Tiny5-Regular.ttf" id="3_utbgu"]
[ext_resource type="Texture2D" uid="uid://b4jdb7g4nmp1" path="res://Assets/Sprites/Credit/FJ_credit_happy.png" id="5_05nlr"]
[ext_resource type="AudioStream" uid="uid://cn7kiej2kkosg" path="res://Assets/Audio/Music/FJ_start_screen_audio.mp3" id="5_ifpi7"]
[ext_resource type="Texture2D" uid="uid://d1qt5oagdk61x" path="res://Assets/Sprites/Credit/FJ_credit_linda.png" id="6_05nlr"]
[ext_resource type="Texture2D" uid="uid://be3tre764y5vi" path="res://Assets/Sprites/Credit/FJ_credit_catto.png" id="7_gemva"]
[ext_resource type="Texture2D" uid="uid://boboko4qf2hvv" path="res://Assets/Sprites/Credit/FJ_credit_joy.png" id="8_05nlr"]
[ext_resource type="PackedScene" uid="uid://c2iuvr2mrnqge" path="res://Scenes/UI/fade_black.tscn" id="11_324v1"]

[node name="CreditScreen" type="Control" unique_id=1163401351]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FadeBlack" parent="." unique_id=1924458165 instance=ExtResource("11_324v1")]
layout_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="." unique_id=422145371]
script = ExtResource("2_gemva")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer" unique_id=1199292023]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0142752165, 0.014275218, 0.014275218, 1)

[node name="MovingHolder" type="Node2D" parent="CanvasLayer" unique_id=1685721381]

[node name="TitleVbox" type="VBoxContainer" parent="CanvasLayer/MovingHolder" unique_id=1910425276]
offset_left = 32.0
offset_top = 179.0
offset_right = 1120.0
offset_bottom = 179.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/MovingHolder/TitleVbox" unique_id=2088652122]
position = Vector2(549, 147)
scale = Vector2(10.979166, 8.395833)
texture = ExtResource("2_ifpi7")

[node name="NamesVBox" type="VBoxContainer" parent="CanvasLayer/MovingHolder" unique_id=82347788]
offset_left = 32.0
offset_top = 648.0
offset_right = 1120.0
offset_bottom = 1253.0

[node name="Label" type="Label" parent="CanvasLayer/MovingHolder/NamesVBox" unique_id=517462685]
layout_mode = 2
theme_override_colors/font_color = Color(0.851769, 0.8517689, 0.85176885, 1)
theme_override_fonts/font = ExtResource("3_utbgu")
theme_override_font_sizes/font_size = 25
text = "Created by
Timeless Joy

Developer
Timeless Joy

Art & animations
Timeless Joy 

Music by
Kevin MacLeod
Monplaisir

SFX from
Pixabay
Mixkit

Special thanks to my inspiration
Our cats!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShowCatsHolder" type="Node2D" parent="CanvasLayer" unique_id=969962803]

[node name="HappyVbox" type="VBoxContainer" parent="CanvasLayer/ShowCatsHolder" unique_id=2046976876 groups=["credit_cats"]]
offset_left = 32.0
offset_top = 493.0
offset_right = 1120.0
offset_bottom = 541.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ShowCatsHolder/HappyVbox" unique_id=454744602]
position = Vector2(549, -190)
scale = Vector2(3, 3)
texture = ExtResource("5_05nlr")

[node name="Label" type="Label" parent="CanvasLayer/ShowCatsHolder/HappyVbox" unique_id=333147706]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_utbgu")
theme_override_font_sizes/font_size = 42
text = "Happy"
horizontal_alignment = 1

[node name="LindaVbox" type="VBoxContainer" parent="CanvasLayer/ShowCatsHolder" unique_id=1606378703 groups=["credit_cats"]]
offset_left = 32.0
offset_top = 493.0
offset_right = 1120.0
offset_bottom = 541.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ShowCatsHolder/LindaVbox" unique_id=1964089681]
position = Vector2(549, -190)
scale = Vector2(3, 3)
texture = ExtResource("6_05nlr")

[node name="Label" type="Label" parent="CanvasLayer/ShowCatsHolder/LindaVbox" unique_id=760242869]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_utbgu")
theme_override_font_sizes/font_size = 42
text = "Linda"
horizontal_alignment = 1

[node name="CattoVbox" type="VBoxContainer" parent="CanvasLayer/ShowCatsHolder" unique_id=1365111717 groups=["credit_cats"]]
offset_left = 32.0
offset_top = 493.0
offset_right = 1120.0
offset_bottom = 541.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ShowCatsHolder/CattoVbox" unique_id=572088134]
position = Vector2(549, -190)
scale = Vector2(3, 3)
texture = ExtResource("7_gemva")

[node name="Label" type="Label" parent="CanvasLayer/ShowCatsHolder/CattoVbox" unique_id=1253198178]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_utbgu")
theme_override_font_sizes/font_size = 42
text = "Catto"
horizontal_alignment = 1

[node name="JoyVbox" type="VBoxContainer" parent="CanvasLayer/ShowCatsHolder" unique_id=1801418617 groups=["credit_cats"]]
offset_left = 32.0
offset_top = 493.0
offset_right = 1120.0
offset_bottom = 541.0

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ShowCatsHolder/JoyVbox" unique_id=1793425013]
position = Vector2(549, -190)
scale = Vector2(3.6, 3.6)
texture = ExtResource("8_05nlr")
region_rect = Rect2(0, 20.65073, 45.108734, 27.34927)

[node name="Label" type="Label" parent="CanvasLayer/ShowCatsHolder/JoyVbox" unique_id=1578190101]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_utbgu")
theme_override_font_sizes/font_size = 42
text = "Joy"
horizontal_alignment = 1

[node name="EndText" type="VBoxContainer" parent="CanvasLayer/ShowCatsHolder" unique_id=740529108 groups=["credit_cats"]]
offset_left = 32.0
offset_top = 307.0
offset_right = 1120.0
offset_bottom = 355.0

[node name="Label" type="Label" parent="CanvasLayer/ShowCatsHolder/EndText" unique_id=1896761024]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_utbgu")
theme_override_font_sizes/font_size = 42
text = "Thank you for playing!"
horizontal_alignment = 1

[node name="Timer" type="Timer" parent="CanvasLayer/ShowCatsHolder" unique_id=814152804]
wait_time = 5.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=1611636883]
stream = ExtResource("5_ifpi7")
volume_db = 3.5
pitch_scale = 0.9
autoplay = true

[connection signal="timeout" from="CanvasLayer/ShowCatsHolder/Timer" to="CanvasLayer" method="_on_timer_timeout"]
